# code-set-arena

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
deploy/student/: .env.example  README.md  docker-compose.yml
deploy/teacher/: .env.example  README.md  docker-compose.yml
docker/runtime/: Dockerfile  run_case.py
docker/student/: Dockerfile
scripts/: build-local-release.sh  complete_mock_student_stage1_packages.py  generate_cli_manuals_v710.py  generate_cli_manuals_v711.py  generate_cli_manuals_v712.py  generate_cli_manuals_v713.py  generate_cli_manuals_v714.py  generate_install_manuals_v710.py  generate_install_manuals_v711.py  generate_install_manuals_v712.py  generate_install_manuals_v713.py  generate_install_manuals_v714.py  generate_mock_student_stage1_packages.py  generate_release_notes_v712.py  generate_release_notes_v713.py  generate_release_notes_v714.py  import_legacy_hard_problems.py  import_legacy_problems.py  prepare_docker_offline_bundle_v710.py  prepare_docker_offline_bundle_v711.py  prepare_docker_offline_bundle_v712.py  prepare_docker_offline_bundle_v713.py  prepare_docker_offline_bundle_v714.py
tests/: conftest.py  test_cli.py  test_config_precedence.py  test_legacy_import.py  test_model_client.py  test_model_run_compat.py  test_package_compat.py  test_package_names.py  test_prompt_runtime_contract.py  test_real_classroom_stage2_generation.py  test_release_layout.py  test_run_engine.py  test_snapshot_version.py  test_teacher_eval.py  test_teacher_version_whitelist.py  test_web_flows.py
(+51 files in other folders)
