[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-set-arena"
version = "7.1.3"
description = "CodeSetArena local course system for adversarial programming problem setting and review"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.111",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
code-set-arena = "codesetarena.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codesetarena = ["templates/**/*.html", "static/*.css"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
